--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="stylesheet/style.css">
 </head>
 <body>
-    
+    <header>
+        <h1>Fantasybooks</h1>
+    </header>
 </body>
 </html>
