some more stuff

--- a/index.html
+++ b/index.html
@@ -8,7 +8,19 @@
 </head>
 <body>
     <header>
-        <h1>Fantasybooks</h1>
+        <div class="headflex">
+            <h1>Fantasybooks</h1>
+            <div id="menu">
+                <a href="#">Bogklub</a>
+                <a href="#">Top 10</a>
+                <a href="#">Secondhand</a>
+                <p class="opbrug btn">Opret Bruger</p>
+            </div>
+        </div>
     </header>
+    <div class="hero">
+        <img src="img/hero image.jpg" alt="hero">
+        <p>I Fantasybooks kan du finde alt indenfor fantasylitteratur. Vi har alle nyere udgivelser indenfor genren, og derudover har vores fysiske butik i Århus også en stor secondhand afdeling med masser af nye, gamle, kendte og ukendte fantasybøger. Der er mulighed for at aftale forsendelse, hvis du ikke har mulighed for at besøge vores fysiske butik.<br><br>Vi glæder os til at tage dig med ind i vores fantastiske fantasyunivers!</p>
+    </div>
 </body>
 </html>
