--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
     <header>
         <div class="headflex">
-            <h1>Fantasybooks</h1>
+            <div class="overskrift">
+                <h1>Fantasy</h1><h1>books</h1>
+            </div>
             <div id="menu">
                 <a href="#">Bogklub</a>
                 <a href="#">Top 10</a>
@@ -22,5 +24,39 @@
         <img src="img/hero image.jpg" alt="hero">
         <p>I Fantasybooks kan du finde alt indenfor fantasylitteratur. Vi har alle nyere udgivelser indenfor genren, og derudover har vores fysiske butik i Århus også en stor secondhand afdeling med masser af nye, gamle, kendte og ukendte fantasybøger. Der er mulighed for at aftale forsendelse, hvis du ikke har mulighed for at besøge vores fysiske butik.<br><br>Vi glæder os til at tage dig med ind i vores fantastiske fantasyunivers!</p>
     </div>
+    <main>
+        <section class="secondhand">
+            <p id="gridtitle">Secondhand</p>
+            <a href="#" id="visflere">Vis flere</a>
+            <img src="secondhand/HarryPotterOgDeVisesSten.png" alt="HarryPotterOgDeVisesSten" class="bogcover cover1">
+            <img src="secondhand/HarryPotterOgFangenFraAzkaban.png" alt="HarryPotterOgFangenFraAzkaban" class="bogcover cover2">
+            <img src="secondhand/MortalEnginesDeRullendeByer.png" alt="MortalEnginesDeRullendeByer" class="bogcover cover3">
+            <img src="secondhand/Vildheks2ViridiansBlod.png" alt="Vildheks2ViridiansBlod" class="bogcover cover4">
+        </section>
+        <section class="maanedensbog">
+            <article>
+                <h3>Månedens bog</h3>
+                <p>Hver måned anbefaler vi en bog. En bog som vi bare ved at alle fantasy læserne vil blive opslugt af.</p>
+                <p>Månedens bog er, som altid, at finde rigtigt billigt i vores secondhand store i denne måned.</p>
+                <a href="#">Tidligere måneders bøger</a>
+            </article>
+            <img src="secondhand/HarryPotterOgDeVisesSten.png" alt="HarryPotterOgDeVisesSten">
+            <aside class="infoombog">
+                <h3>Harry Potter Og De Vises Sten</h3>
+                <p class="forfatter">Forfatter</p>
+                <p class="type">Type</p>
+                <p class="navn">J.K. Rowling</p>
+                <p class="typer">Fantasy, Alle aldre</p>
+                <p>Her kan du læse et kort resumé af bogen, samt få vores oplevelser både med bogen og med filmen.</p>
+            </aside>
+        </section>
+        <section class="bogklub">
+            <img src="img/Cover-Bogklub.jpg" alt="bogklub">
+            <p class="tilmeld">Tilmeld mig bogklubben</p>
+        </section>
+    </main>
+    <footer>
+        <img src="img/footer.jpg" alt="fantasybøger">
+    </footer>
 </body>
 </html>
