--- a/index.html
+++ b/index.html
@@ -33,22 +33,24 @@
             <img src="secondhand/MortalEnginesDeRullendeByer.png" alt="MortalEnginesDeRullendeByer" class="bogcover cover3">
             <img src="secondhand/Vildheks2ViridiansBlod.png" alt="Vildheks2ViridiansBlod" class="bogcover cover4">
         </section>
-        <section class="maanedensbog">
+        <section class="maanbog">
             <article>
                 <h3>Månedens bog</h3>
                 <p>Hver måned anbefaler vi en bog. En bog som vi bare ved at alle fantasy læserne vil blive opslugt af.</p>
                 <p>Månedens bog er, som altid, at finde rigtigt billigt i vores secondhand store i denne måned.</p>
                 <a href="#">Tidligere måneders bøger</a>
             </article>
-            <img src="secondhand/HarryPotterOgDeVisesSten.png" alt="HarryPotterOgDeVisesSten">
-            <aside class="infoombog">
-                <h3>Harry Potter Og De Vises Sten</h3>
-                <p class="forfatter">Forfatter</p>
-                <p class="type">Type</p>
-                <p class="navn">J.K. Rowling</p>
-                <p class="typer">Fantasy, Alle aldre</p>
-                <p>Her kan du læse et kort resumé af bogen, samt få vores oplevelser både med bogen og med filmen.</p>
-            </aside>
+            <article class="harry">
+                <img src="secondhand/HarryPotterOgDeVisesSten.png" alt="HarryPotterOgDeVisesSten">
+                <aside class="infoombog">
+                    <h3>Harry Potter Og De Vises Sten</h3>
+                    <p class="forfatter">Forfatter</p>
+                    <p class="type">Type</p>
+                    <p class="navn">J.K. Rowling</p>
+                    <p class="typer">Fantasy, Alle aldre</p>
+                    <p>Her kan du læse et kort resumé af bogen, samt få vores oplevelser både med bogen og med filmen.</p>
+                </aside>
+            </article>
         </section>
         <section class="bogklub">
             <img src="img/Cover-Bogklub.jpg" alt="bogklub">
