--- a/index.html
+++ b/index.html
@@ -34,30 +34,64 @@
             <img src="secondhand/Vildheks2ViridiansBlod.png" alt="Vildheks2ViridiansBlod" class="bogcover cover4">
         </section>
         <section class="maanbog">
-            <article>
-                <h3>Månedens bog</h3>
-                <p>Hver måned anbefaler vi en bog. En bog som vi bare ved at alle fantasy læserne vil blive opslugt af.</p>
-                <p>Månedens bog er, som altid, at finde rigtigt billigt i vores secondhand store i denne måned.</p>
-                <a href="#">Tidligere måneders bøger</a>
+            <article class="infoommaan">
+                <div>
+                    <h3>Månedens bog</h3>
+                    <br>
+                    <p>Hver måned anbefaler vi en bog. En bog som vi bare ved at alle fantasy læserne vil blive opslugt af.</p>
+                    <br>
+                    <p>Månedens bog er, som altid, at finde rigtigt billigt i vores secondhand store i denne måned.</p>
+                    <br>
+                    <a href="#">Tidligere måneders bøger</a>
+                </div>
             </article>
             <article class="harry">
-                <img src="secondhand/HarryPotterOgDeVisesSten.png" alt="HarryPotterOgDeVisesSten">
-                <aside class="infoombog">
-                    <h3>Harry Potter Og De Vises Sten</h3>
-                    <p class="forfatter">Forfatter</p>
-                    <p class="type">Type</p>
-                    <p class="navn">J.K. Rowling</p>
-                    <p class="typer">Fantasy, Alle aldre</p>
-                    <p>Her kan du læse et kort resumé af bogen, samt få vores oplevelser både med bogen og med filmen.</p>
-                </aside>
+                <div>
+                    <img src="secondhand/HarryPotterOgDeVisesSten.png" alt="HarryPotterOgDeVisesSten" class="bilharry">
+                    <aside class="infoombog">
+                        <h3 class="overskrift">Harry Potter og de vises sten</h3>
+                        <p class="forfatter">Forfatter</p>
+                        <p class="type">Type</p>
+                        <p class="navn">J.K. Rowling</p>
+                        <p class="typer">Fantasy, Alle aldre</p>
+                        <p class="boginfo">Her kan du læse et kort resumé af bogen, samt få vores oplevelser både med bogen og med filmen.</p>
+                        <div class="bestilbog"><p class="btn">bestilbog</p></div>
+                    </aside>
+                </div>
             </article>
         </section>
         <section class="bogklub">
             <img src="img/Cover-Bogklub.jpg" alt="bogklub">
-            <p class="tilmeld">Tilmeld mig bogklubben</p>
+            <p class="tilmeld btn">Tilmeld mig bogklubben</p>
         </section>
     </main>
     <footer>
+        <span class="footgrid">
+            <div class="hvor">
+                <h4>Fantasy</h4><h4>books</h4>
+                <p>Egelykke 3, st.</p>
+                <p>8000 Århus C.</p>
+            </div>
+            <div class="tid">
+                <p>Åbningstider:</p>
+                <p>Mandag - Fredag: 10.00 - 18.00</p>
+                <p>Lørdag: 10.00 - 13.00</p>
+            </div>
+            <div class="tlf">
+                <p>Telefon</p>
+                <p>13 34 56 78</p>
+            </div>
+            <div class="mail">
+                <p>Mail</p>
+                <a href="#">info@fantasybooks.dk</a>
+            </div>
+            <div class="social">
+                <p>Følg os på sociale medier:</p>
+                <img src="img/facebook-icon.svg" alt="facebool">
+                <img src="img/instagram-icon.svg" alt="instagram">
+                <img src="img/twitter-icon.svg" alt="twitter">
+            </div>
+        </span>
         <img src="img/footer.jpg" alt="fantasybøger">
     </footer>
 </body>
