--- a/index.html
+++ b/index.html
@@ -12,11 +12,17 @@
             <div class="overskrift">
                 <h1>Fantasy</h1><h1>books</h1>
             </div>
-            <div id="menu">
-                <a href="#">Bogklub</a>
-                <a href="#">Top 10</a>
-                <a href="#">Secondhand</a>
-                <p class="opbrug btn">Opret Bruger</p>
+            <div class="ham">
+                <input class="menu-btn" type="checkbox">
+                <div id="menu">
+                    <a href="#">Bogklub</a>
+                    <a href="#">Top 10</a>
+                    <a href="#">Secondhand</a>
+                    <p class="opbrug btn">Opret Bruger</p>
+                </div>
+                <div class="div1"></div>
+                <div class="div2"></div>
+                <div class="div3"></div>
             </div>
         </div>
     </header>
