--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <main>
         <section class="secondhand">
             <p id="gridtitle">Secondhand</p>
-            <a href="#" id="visflere">Vis flere</a>
+            <a href="#" id="visflere">Vis flere<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M295.6 163.7c-5.1 5-5.1 13.3-.1 18.4l60.8 60.9H124.9c-7.1 0-12.9 5.8-12.9 13s5.8 13 12.9 13h231.3l-60.8 60.9c-5 5.1-4.9 13.3.1 18.4 5.1 5 13.2 5 18.3-.1l82.4-83c1.1-1.2 2-2.5 2.7-4.1.7-1.6 1-3.3 1-5 0-3.4-1.3-6.6-3.7-9.1l-82.4-83c-4.9-5.2-13.1-5.3-18.2-.3z"/></svg></a>
             <img src="secondhand/HarryPotterOgDeVisesSten.png" alt="HarryPotterOgDeVisesSten" class="bogcover cover1">
             <img src="secondhand/HarryPotterOgFangenFraAzkaban.png" alt="HarryPotterOgFangenFraAzkaban" class="bogcover cover2">
             <img src="secondhand/MortalEnginesDeRullendeByer.png" alt="MortalEnginesDeRullendeByer" class="bogcover cover3">
@@ -48,7 +48,7 @@
                     <br>
                     <p>Månedens bog er, som altid, at finde rigtigt billigt i vores secondhand store i denne måned.</p>
                     <br>
-                    <a href="#">Tidligere måneders bøger</a>
+                    <a href="#">Tidligere måneders bøger<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M295.6 163.7c-5.1 5-5.1 13.3-.1 18.4l60.8 60.9H124.9c-7.1 0-12.9 5.8-12.9 13s5.8 13 12.9 13h231.3l-60.8 60.9c-5 5.1-4.9 13.3.1 18.4 5.1 5 13.2 5 18.3-.1l82.4-83c1.1-1.2 2-2.5 2.7-4.1.7-1.6 1-3.3 1-5 0-3.4-1.3-6.6-3.7-9.1l-82.4-83c-4.9-5.2-13.1-5.3-18.2-.3z"/></svg></a>
                 </div>
             </article>
             <article class="harry">
